Icon alignment fix

--- a/WebUI/src/app/components/media/search/result/media-search-result.component.scss
+++ b/WebUI/src/app/components/media/search/result/media-search-result.component.scss
@@ -75,8 +75,7 @@
     cursor    : pointer;
 }
 .file-name-wrapper{
-    align-items: center;
-
+    display: inline-flex;
     .ic_tones {
         width : 20px;
         height : 20px;
